Update: 일별조회 임시 유저 추가하기